--- a/configs/wx_server.supervisord.conf
+++ b/configs/wx_server.supervisord.conf
@@ -1,9 +1,9 @@
 [program:gunicorn]
 command=/home/pi/virtualenvs/wx_server/bin/gunicorn --bind 0.0.0.0:8000 --worker-class gevent --workers 1 --threads 4 wx_server.wsgi:app
-command=/path/to/gunicorn main:application -c /path/to/gunicorn.conf.py
 environment=PYTHONPATH=/home/pi/home/pi/raspberry-pi-ham-radio,WX_SERVER_CONFIG_PATH=/home/pi/raspberry-pi-ham-radio/configs/wx_server.conf
 directory=/home/pi/raspberry-pi-ham-radio
 user=pi
 autostart=true
 autorestart=true
 redirect_stderr=true
+stdout_logfile=/var/log/supervisor/wx_server.log
