--- a/radio_bridge/requirements.txt
+++ b/radio_bridge/requirements.txt
@@ -1,5 +1,7 @@
+structlog==20.1.0
+colorama==0.4.3
+protobuf==3.13.0
 pluginlib==0.8.0
 gTTS==2.1.1
 PyAudio==0.2.11
 scipy==1.5.2
-protobuf==3.13.0
