--- a/configs/radio_bridge.supervisord.conf
+++ b/configs/radio_bridge.supervisord.conf
@@ -1,4 +1,4 @@
-[program:gunicorn]
+[program:radio_bridge]
 command=/home/pi/virtualenvs/radio_bridge/bin/python /home/pi/raspberry-pi-ham-radio/radio_bridge/radio_bridge/main.py
 environment=PYTHONPATH=/home/pi/raspberry-pi-ham-radio:/home/pi/raspberry-pi-ham-radio/radio_bridge,WX_SERVER_CONFIG_PATH=/home/pi/raspberry-pi-ham-radio/configs/wx_server.conf
 directory=/home/pi/raspberry-pi-ham-radio
