--- a/configs/wx_server.supervisord.conf
+++ b/configs/wx_server.supervisord.conf
@@ -1,4 +1,4 @@
-[program:gunicorn]
+[program:wx_server]
 command=/home/pi/virtualenvs/wx_server/bin/gunicorn --bind 0.0.0.0:8000 --worker-class gevent --workers 1 --threads 4 wx_server.wsgi:app
 environment=PYTHONPATH=/home/pi/raspberry-pi-ham-radio:/home/pi/raspberry-pi-ham-radio/wx_server,WX_SERVER_CONFIG_PATH=/home/pi/raspberry-pi-ham-radio/configs/wx_server.conf
 directory=/home/pi/raspberry-pi-ham-radio
