Add support for radio bridge specific config.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -1,19 +1,23 @@
 [main]
+# Path to the logging config file
+logging_config = {rootdir}/conf/logging.conf
 # Maximum single transmit time in seconds
 max_tx_time = 120
+# Valid values: vox,gpio
+tx_mode = vox
 
 [audio]
 # Should match native input / sound card sample rate
 sample_rate = 44100
 
 [tts]
-library = tts|espeak
+# Valid values: gtts,espeak
+library = tts
 
 [dtmf]
 implementation = fft_2
 
 [plugin:cron]
-
 say_hello_world_every_5_seconds = interval;5s;Hello World! Test test.
 say_test_every_minute = cron;* * * * * * * *;Test!
 print_hello_world = interval;5s;Hello World! Test test.
