--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -13,6 +13,9 @@ sample_rate = 44100
 [tts]
 # Valid values: gtts,espeak
 library = tts
+# Directory where generates tts audio files are cached so they can be reused if the text itself
+# hasn't changed
+cache_directory = /tmp/tts-audio-cache
 
 [dtmf]
 implementation = fft_2
