Add tts.enable_cache config option.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -13,6 +13,7 @@ sample_rate = 44100
 [tts]
 # Valid values: gtts,espeak
 library = tts
+enable_cache = true
 # Directory where generates tts audio files are cached so they can be reused if the text itself
 # hasn't changed
 cache_directory = /tmp/tts-audio-cache
