Make input device index and sample rate configurable via config.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -7,8 +7,11 @@ max_tx_time = 120
 tx_mode = vox
 
 [audio]
-# Should match native input / sound card sample rate
-sample_rate = 44100
+# Should match native input (microphone) / sound card sample rate
+#input_device_index = 0
+input_device_index = 11
+#sample_rate = 44100
+sample_rate = 48000
 
 [tts]
 # Valid values: gtts,espeak
