Add WIP first version of CronSay plugin.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -25,6 +25,6 @@ cache_directory = /tmp/tts-audio-cache
 implementation = fft_2
 
 [plugin:cron]
-say_hello_world_every_5_seconds = interval;5s;Hello World! Test test.
-say_test_every_minute = cron;* * * * * * * *;Test!
-print_hello_world = interval;5s;Hello World! Test test.
+say_hello_world_every_120_seconds = interval;seconds=120;Current time is {time_utc} UTC.
+#say_test_every_minute = cron;* * * * * * * *;Test!
+#print_hello_world = interval;5s;Hello World! Test test.
