Add support for cron syntax based cron plugin jobs, add additional abuse prevent safe guards which verify max audio duration length and maximum permissible job run interval.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -1,6 +1,8 @@
 [main]
 # Path to the logging config file
 logging_config = {rootdir}/conf/logging.conf
+# True to enable dev mode where some abuse prevention and other limits are not enforced.
+dev_mode = True
 # Maximum single transmit time in seconds
 max_tx_time = 120
 # Valid values: vox,gpio
@@ -25,6 +27,8 @@ cache_directory = /tmp/tts-audio-cache
 implementation = fft_2
 
 [plugin:cron]
-say_hello_world_every_120_seconds = interval;seconds=120;Current time is {time_utc} UTC.
+say_hello_world_every_120_seconds = interval;seconds=120;text;Current time is {time_utc} UTC.
+play_callsign_every_40_seconds = interval;seconds=40;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
+play_callsign_every_5_seconds = cron;*/5 * * * *;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
 #say_test_every_minute = cron;* * * * * * * *;Test!
 #print_hello_world = interval;5s;Hello World! Test test.
