Add support for playing audio files to the cron say plugin.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -27,8 +27,6 @@ cache_directory = /tmp/tts-audio-cache
 implementation = fft_2
 
 [plugin:cron]
-say_hello_world_every_120_seconds = interval;seconds=120;text;Current time is {time_utc} UTC.
-play_callsign_every_40_seconds = interval;seconds=40;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
-play_callsign_every_5_seconds = cron;*/5 * * * *;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
-#say_test_every_minute = cron;* * * * * * * *;Test!
-#print_hello_world = interval;5s;Hello World! Test test.
+say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
+#play_callsign_every_5_seconds = interval;seconds=5;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
+#play_callsign_every_5_minutes = cron;*/5 * * * *;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
