Add support for DTMF plugins which take additional data which comes after DTMF plugin sequence.
Also add new weather location plugin which allows weather info retrieval
for a specific location.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -7,6 +7,8 @@ dev_mode = True
 max_tx_time = 120
 # Valid values: vox,gpio
 tx_mode = vox
+# Which RPi GPIO pin to use when tx_mode = vox
+gpio_pin = 10
 
 [audio]
 # Should match native input (microphone) / sound card sample rate
@@ -27,6 +29,6 @@ cache_directory = /tmp/tts-audio-cache
 implementation = fft_2
 
 [plugin:cron]
-say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
+#say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
 #play_callsign_every_5_seconds = interval;seconds=5;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
 #play_callsign_every_5_minutes = cron;*/5 * * * *;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
