--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,8 +9,20 @@ on:
       - master
 
 jobs:
+  pre_job:
+    name: Skip Duplicate Jobs Pre Job
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.skip_check.outputs.should_skip }}
+    steps:
+      - id: skip_check
+        uses: fkirc/skip-duplicate-actions@master
+        with:
+          github_token: ${{ github.token }}
+
   wx-server-build:
     runs-on: ubuntu-latest
+    needs: pre_job
     strategy:
       max-parallel: 2
       matrix:
@@ -23,17 +35,25 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Cache Python Dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('dev-requirements.txt', 'wx_server/**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox
+        pip install tox tox-gh-actions
     - name: Test with tox
       working-directory: wx_server/
       run: |
-        tox -vvv
+        tox -elint -vvv
 
   radio-bridge-build:
     runs-on: ubuntu-latest
+    needs: pre_job
     strategy:
       max-parallel: 2
       matrix:
@@ -46,11 +66,23 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install Apt Dependencies
+      run: |
+        sudo apt-get update
+        # Needed by pyaudio Python package
+        sudo apt-get install -y libportaudio2 portaudio19-dev
+    - name: Cache Python Dependencies
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('dev-requirements.txt', 'radio_bridge/**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install --upgrade tox
+        pip install tox tox-gh-actions
     - name: Test with tox
       working-directory: radio_bridge/
       run: |
-        tox -vvv
+        tox -elint -vvv
