Update available config options.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -3,10 +3,15 @@
 logging_config = {rootdir}/conf/logging.conf
 # True to enable dev mode where some abuse prevention and other limits are not enforced.
 dev_mode = True
+# True to enable emulator mode in which DTMF sequences are read from the
+# keyboard.
+emulator_mode = True
+
+[tx]
+# Valid values: vox,gpio
+mode = vox
 # Maximum single transmit time in seconds
 max_tx_time = 120
-# Valid values: vox,gpio
-tx_mode = vox
 # Which RPi GPIO pin to use when tx_mode = vox
 gpio_pin = 10
 
@@ -19,7 +24,8 @@ sample_rate = 48000
 
 [tts]
 # Valid values: gtts,espeak
-library = tts
+library = gtts
+# True to cache synthesized files
 enable_cache = true
 # Directory where generates tts audio files are cached so they can be reused if the text itself
 # hasn't changed
@@ -30,5 +36,7 @@ implementation = fft_2
 
 [plugin:cron]
 #say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
+#say_text_as_morse_every_30_seconds = interval;seconds=30;text_to_morse;sos
+#say_morse_code_every_40_seconds = interval;seconds=40;morse;... --- ...
 #play_callsign_every_5_seconds = interval;seconds=5;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
 #play_callsign_every_5_minutes = cron;*/5 * * * *;file;/home/kami/w/pi-ham-radio/radio_bridge/audio_files/callsign.mp3
