--- a/radio_bridge/requirements.txt
+++ b/radio_bridge/requirements.txt
@@ -2,7 +2,10 @@ structlog==20.1.0
 colorama==0.4.3
 protobuf==3.13.0
 pluginlib==0.8.0
+# Needed when tts.library = "gtts"
 gTTS==2.1.1
+# Needed when tts.library = "espeak"
+py-espeak-ng==0.1.8
 PyAudio==0.2.11
 scipy==1.5.2
 apscheduler==3.6.3
