Allow callsign to be defined a config.
It can either be a string which is synthesized and play or path to audio
file which is played.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -8,6 +8,10 @@ dev_mode = True
 emulator_mode = True
 
 [tx]
+# Callsign to say before each message or a path to audio file to play ending wither either .mp3
+# or .wav extension.
+callsign = SIERRA FIVE TWO
+# callsign = /tmp/callsign.mp3
 # Valid values: vox,gpio
 mode = vox
 # Maximum single transmit time in seconds
