Add unit tests target to tox file.

--- a/radio_bridge/tox.ini
+++ b/radio_bridge/tox.ini
@@ -8,7 +8,7 @@ setenv =
 [testenv]
 setenv =
   LINT_FILES_TO_CHECK={env:LINT_FILES_TO_CHECK:radio_bridge/}
-  PYTHONPATH={toxinidir}
+  PYTHONPATH={toxinidir}/..:{toxinidir}/../wx_server:{toxinidir}
   PY_COLORS=1
 install_command = pip install -U --force-reinstall {opts} {packages}
 whitelist_externals =
@@ -28,3 +28,11 @@ deps =
 commands =
     bash -c 'black --check --config ../pyproject.toml {env:LINT_FILES_TO_CHECK}'
     bash -c 'flake8 --config ../lint-configs/.flake8 {env:LINT_FILES_TO_CHECK}'
+
+[testenv:unit-tests]
+deps =
+    -r ../dev-requirements.txt
+    -r test-requirements.txt
+    -r requirements.txt
+commands =
+    pytest -vv -s tests/unit/
