--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
-    - name: Test with tox
+    - name: Run Lint
       working-directory: wx_server/
       run: |
         tox -elint -vvv
@@ -82,7 +82,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install tox tox-gh-actions
-    - name: Test with tox
+    - name: Run Lint
       working-directory: radio_bridge/
       run: |
         tox -elint -vvv
+    - name: Run Unit Tests
+      working-directory: radio_bridge/
+      run: |
+        tox -eunit-tests -vvv
