--- a/radio_bridge/requirements.txt
+++ b/radio_bridge/requirements.txt
@@ -10,6 +10,7 @@ PyAudio==0.2.11
 scipy==1.5.2
 apscheduler==3.6.3
 mutagen==1.45.1
+expiringdict==1.2.1
 # Needed for Location Weather Plugin
 requests==2.24.0
 xmltodict==0.12.0
