Also run lint on tests directory.

--- a/radio_bridge/tox.ini
+++ b/radio_bridge/tox.ini
@@ -7,7 +7,7 @@ setenv =
 
 [testenv]
 setenv =
-  LINT_FILES_TO_CHECK={env:LINT_FILES_TO_CHECK:radio_bridge/}
+  LINT_FILES_TO_CHECK={env:LINT_FILES_TO_CHECK:radio_bridge/ tests/}
   PYTHONPATH={toxinidir}/..:{toxinidir}/../wx_server:{toxinidir}
   PY_COLORS=1
 install_command = pip install -U --force-reinstall {opts} {packages}
