Add support for pluggable plugin executors.
Right now we support two:

1. "native" which runs plugins inside the main server thread
2. "process" which runs plugins inside a subprocess.

When a "process" executor is used, we can enforce more QoS and other
safe-guards, such as killing the plugin process if the plugin run time
takes more than plugins.max_run_time amount of seconds.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -38,6 +38,16 @@ cache_directory = /tmp/tts-audio-cache
 [dtmf]
 implementation = fft_2
 
+[plugins]
+# Which plugin execution model to use. Valid values:
+# - native -> Run plugins inside the main server thread.
+# - process -> Run plugins in an isolated sub process. This allows us to kill the plugin if it
+# misbehaves or execution takes longer than max_run_time seconds
+executor = process
+# Maximum allowed run time for plugin run() method. If it takes longer than that, the plugin
+# will be automatically killed and TX disabled.
+max_run_time = 120
+
 [plugin:cron]
 #say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
 #say_text_as_morse_every_30_seconds = interval;seconds=30;text_to_morse;sos
