Update example config.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -3,8 +3,7 @@
 logging_config = {rootdir}/conf/logging.conf
 # True to enable dev mode where some abuse prevention and other limits are not enforced.
 dev_mode = True
-# True to enable emulator mode in which DTMF sequences are read from the
-# keyboard.
+# True to enable emulator mode in which DTMF sequences are read from the keyboard.
 emulator_mode = True
 
 [tx]
@@ -14,9 +13,7 @@ callsign = SIERRA FIVE TWO
 # callsign = /tmp/callsign.mp3
 # Valid values: vox,gpio
 mode = vox
-# Maximum single transmit time in seconds
-max_tx_time = 120
-# Which RPi GPIO pin to use when tx_mode = vox
+# Which RPi GPIO pin to use when tx.mode = vox
 gpio_pin = 10
 
 [audio]
@@ -27,9 +24,10 @@ input_device_index = 11
 sample_rate = 48000
 
 [tts]
-# Valid values: gtts,espeak
+# Which TTS implementation to use. Valid values: gtts,espeak
 implementation = espeak
-# True to cache synthesized files
+# True to cache synthesized files to allow faster playbacks of the text which was already
+# synthesized in the past.
 enable_cache = true
 # Directory where generates tts audio files are cached so they can be reused if the text itself
 # hasn't changed
