Allow operator to definim minimum time which must pass between run interval of each plugin inside the config.
This can be used for abuse and spam prevention.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -46,6 +46,11 @@ executor = process
 # will be automatically killed and TX disabled.
 max_run_time = 120
 
+[plugin:current_time]
+# How much time must pass between two executions of this command. If user requests it before
+# this time has passed, request will be denied.
+minimum_run_interval = 30
+
 [plugin:cron]
 #say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
 #say_text_as_morse_every_30_seconds = interval;seconds=30;text_to_morse;sos
