Reduce tox verbosity on CI.

--- a/radio_bridge/tox.ini
+++ b/radio_bridge/tox.ini
@@ -24,6 +24,7 @@ python =
 [testenv:lint]
 deps =
     -r ../dev-requirements.txt
+    -r test-requirements.txt
     -r requirements.txt
 commands =
     bash -c 'black --check --config ../pyproject.toml {env:LINT_FILES_TO_CHECK}'
