--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
     - name: Run Lint
       working-directory: wx_server/
       run: |
-        tox -elint -vvv
+        tox -elint
 
   radio-bridge-build:
     runs-on: ubuntu-latest
@@ -89,4 +89,4 @@ jobs:
     - name: Run Unit Tests
       working-directory: radio_bridge/
       run: |
-        tox -eunit-tests -vvv
+        tox -eunit-tests
