Update wx server readme.

--- a/wx_server/conf/wx_server.conf
+++ b/wx_server/conf/wx_server.conf
@@ -1,5 +1,5 @@
 [main]
-# Place where weather observarion data is stored
+# Place where weather observation data is stored
 data_dir = {rootdir}/data/
 # Path to the logging config to use
 logging_config = {rootdir}/conf/logging.conf
