Update tox and github actions config.

--- a/wx_server/tox.ini
+++ b/wx_server/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint
+envlist = lint,unit-tests
 skipsdist = true
 passenv = TERM
 setenv =
@@ -8,7 +8,7 @@ setenv =
 [testenv]
 setenv =
   LINT_FILES_TO_CHECK={env:LINT_FILES_TO_CHECK:wx_server/}
-  PYTHONPATH={toxinidir}
+  PYTHONPATH={toxinidir}/..:{toxinidir}
   PY_COLORS=1
 install_command = pip install -U --force-reinstall {opts} {packages}
 whitelist_externals =
@@ -24,7 +24,16 @@ python =
 [testenv:lint]
 deps =
     -r ../dev-requirements.txt
+    -r test-requirements.txt
     -r requirements.txt
 commands =
     bash -c 'black --check --config ../pyproject.toml {env:LINT_FILES_TO_CHECK}'
     bash -c 'flake8 --config ../lint-configs/.flake8 {env:LINT_FILES_TO_CHECK}'
+
+[testenv:unit-tests]
+deps =
+    -r ../dev-requirements.txt
+    -r test-requirements.txt
+    -r requirements.txt
+commands =
+    pytest -vv -s tests/unit/
