--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,8 +26,7 @@ jobs:
     strategy:
       max-parallel: 2
       matrix:
-        python-version: [3.6]
-          #python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v1
@@ -50,15 +49,17 @@ jobs:
       working-directory: wx_server/
       run: |
         tox -elint
-
+    - name: Run Unit Tests
+      working-directory: wx_server/
+      run: |
+        tox -eunit-tests
   radio-bridge-build:
     runs-on: ubuntu-latest
     needs: pre_job
     strategy:
       max-parallel: 2
       matrix:
-        python-version: [3.6]
-        #python-version: [3.6, 3.7, 3.8, 3.9]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v1
