Introduce plugin specific configuration options.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -46,10 +46,37 @@ executor = process
 # will be automatically killed and TX disabled.
 max_run_time = 120
 
-[plugin:current_time]
+#
+# Plugin specific configuration is located below
+#
+
+# The following configuration options are common to all the plugins:
+# dtmf_sequence - Override which DTMF sequence is used to trigger invocation of that plugin.
+# minimum_run_interval - How much time (in seconds) must pass between subsequent invocations of this
+# plugin (to prevent abuse, spamming, etc.)
+
+[plugin:help]
+dtmf_sequence = 12
 # How much time must pass between two executions of this command. If user requests it before
 # this time has passed, request will be denied.
 minimum_run_interval = 30
+
+[plugin:clear_sequence]
+dtmf_sequence = *D*
+minimum_run_interval = 30
+
+[plugin:current_time]
+dtmf_sequence = 21
+minimum_run_interval = 30
+
+[plugin:local_weather]
+dtmf_sequence = 31
+minimum_run_interval = 120
+
+[plugin:location_weather]
+dtmf_sequence = 35??
+minimum_run_interval = 120
+weather_station_id = home
 
 [plugin:cron]
 #say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
