Add initial WIP code for working with OTPs (one time pins) which will be used for executing admin DTMF plugins (commands).

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -45,6 +45,10 @@ executor = process
 # Maximum allowed run time for plugin run() method. If it takes longer than that, the plugin
 # will be automatically killed and TX disabled.
 max_run_time = 120
+# File where one time pin codes which are generated on server startup and can be used for
+# invoking admin commands are stored on disk. Keep in mind that those values are stored in
+# plain text.
+admin_otps_file_path = /tmp/radio-bridge-admin-otps.txt
 
 #
 # Plugin specific configuration is located below
