Use local fork with subprocess.popen workaround / fix.

--- a/radio_bridge/requirements.txt
+++ b/radio_bridge/requirements.txt
@@ -5,7 +5,9 @@ pluginlib==0.8.0
 # Needed when tts.library = "gtts"
 gTTS==2.1.1
 # Needed when tts.library = "espeak"
-py-espeak-ng==0.1.8
+# We need our work which includes subprocess.Popen workaround which allows us to
+# kill spawned process when we kill the parent process
+git+https://github.com/Kami/py-espeak-ng.git@preexec_fn_patch#egg=py-espeak-ng
 PyAudio==0.2.11
 scipy==1.5.2
 apscheduler==3.6.3
