Add support for enabling and disabling TX via gpio pin.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -13,7 +13,7 @@ callsign = SIERRA FIVE TWO
 # callsign = /tmp/callsign.mp3
 # Valid values: vox,gpio
 mode = vox
-# Which RPi GPIO pin to use when tx.mode = vox
+# Which RPi GPIO pin to use when tx.mode = gpio
 gpio_pin = 10
 
 [audio]
@@ -66,6 +66,7 @@ dtmf_sequence = 12
 minimum_run_interval = 30
 
 [plugin:clear_sequence]
+enable = True
 dtmf_sequence = *D*
 minimum_run_interval = 30
 
