--- a/radio_bridge/requirements.txt
+++ b/radio_bridge/requirements.txt
@@ -15,6 +15,8 @@ scipy==1.5.2
 apscheduler==3.6.3
 mutagen==1.45.1
 expiringdict==1.2.1
+# Needed for current time plugin
+pytz==2020.1
 # Needed for Location Weather Plugin
 requests==2.24.0
 xmltodict==0.12.0
