Update sample config, readme.

--- a/radio_bridge/conf/radio_bridge.conf
+++ b/radio_bridge/conf/radio_bridge.conf
@@ -6,6 +6,13 @@ dev_mode = True
 # True to enable emulator mode in which DTMF sequences are read from the keyboard.
 emulator_mode = True
 
+[rx]
+# Record time in seconds we use for audio files on which we then perform DTMF decoding algorithm.
+# Each recording should be long enough to capture a single DTMF character.
+# In most cases you won't need to change this value since with 0.2 we achieve very high decoding
+# accuracy with the current algorithm.
+record_time = 0.2
+
 [tx]
 # Callsign to say before each message or a path to audio file to play ending wither either .mp3
 # or .wav extension.
@@ -34,7 +41,7 @@ enable_cache = true
 cache_directory = /tmp/tts-audio-cache
 
 [dtmf]
-implementation = fft_2
+implementation = fft
 
 [plugins]
 # Which plugin execution model to use. Valid values:
@@ -43,7 +50,7 @@ implementation = fft_2
 # misbehaves or execution takes longer than max_run_time seconds
 executor = process
 # Maximum allowed run time for plugin run() method. If it takes longer than that, the plugin
-# will be automatically killed and TX disabled.
+# will be automatically killed and TX disabled. This value can be overriden on per plugin basis.
 max_run_time = 120
 # File where one time pin codes which are generated on server startup and can be used for
 # invoking admin commands are stored on disk. Keep in mind that those values are stored in
@@ -72,16 +79,25 @@ minimum_run_interval = 30
 
 [plugin:current_time]
 dtmf_sequence = 21
-minimum_run_interval = 30
+minimum_run_interval = 31
+local_timezone = Europe/Ljubljana
 
 [plugin:local_weather]
 dtmf_sequence = 31
 minimum_run_interval = 120
+weather_station_id = home
 
 [plugin:location_weather]
 dtmf_sequence = 35??
 minimum_run_interval = 120
-weather_station_id = home
+
+[plugin:record_audio]
+# Recording will be organized into files with a duration (in seconds) specified here
+data_dir = /tmp/radio-bridge-recordings/
+record_duration = 10
+input_device_index = 11
+channels = 1
+sample_rate = 48000
 
 [plugin:cron]
 #say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
