Update config loading and config value retrieval code.
We now use configobj library plus additional abstractions for retrieving
values which make code more robust and easier to change the underlying
implementation later on.

In addition to that, we now support updating the config (e.g. if it was
changed by the admin plugin) and re-loading it if the file has been
modified since the last load time.

--- a/radio_bridge/conf/radio_bridge.example.conf
+++ b/radio_bridge/conf/radio_bridge.example.conf
@@ -1,4 +1,6 @@
 [main]
+# Path to the database files where various state is persisted
+db_path = /opt/radio-bridge/db.sqlite
 # Path to the logging config file
 logging_config = {rootdir}/conf/logging.conf
 # True to enable dev mode where some abuse prevention and other limits are not enforced.
@@ -48,6 +50,7 @@ implementation = fft
 # - native -> Run plugins inside the main server thread.
 # - process -> Run plugins in an isolated sub process. This allows us to kill the plugin if it
 # misbehaves or execution takes longer than max_run_time seconds
+#executor = process
 executor = process
 # Maximum allowed run time for plugin run() method. If it takes longer than that, the plugin
 # will be automatically killed and TX disabled. This value can be overriden on per plugin basis.
@@ -79,7 +82,7 @@ minimum_run_interval = 30
 
 [plugin:current_time]
 dtmf_sequence = 21
-minimum_run_interval = 31
+minimum_run_interval = 10
 local_timezone = Europe/Ljubljana
 
 [plugin:local_weather]
@@ -90,6 +93,8 @@ weather_station_id = home
 [plugin:location_weather]
 dtmf_sequence = 35??
 minimum_run_interval = 120
+
+[plugin:repeater_infox]
 
 [plugin:record_audio]
 # Recording will be organized into files with a duration (in seconds) specified here
