--- a/radio_bridge/requirements.txt
+++ b/radio_bridge/requirements.txt
@@ -2,6 +2,7 @@ structlog==20.1.0
 colorama==0.4.3
 protobuf==3.13.0
 pluginlib==0.8.0
+configobj==5.0.6
 # Needed when tx.mode=gpio
 #RPi.GPIO==0.7.0
 # Needed when tts.library = "gtts"
