--- a/wx_server/tox.ini
+++ b/wx_server/tox.ini
@@ -7,7 +7,7 @@ setenv =
 
 [testenv]
 setenv =
-  LINT_FILES_TO_CHECK={env:LINT_FILES_TO_CHECK:wx_server/}
+  LINT_FILES_TO_CHECK={env:LINT_FILES_TO_CHECK:wx_server/ tests/}
   PYTHONPATH={toxinidir}/..:{toxinidir}
   PY_COLORS=1
 install_command = pip install -U --force-reinstall {opts} {packages}
@@ -29,6 +29,7 @@ deps =
 commands =
     bash -c 'black --check --config ../pyproject.toml {env:LINT_FILES_TO_CHECK}'
     bash -c 'flake8 --config ../lint-configs/.flake8 {env:LINT_FILES_TO_CHECK}'
+    bash -c 'mypy --pretty --no-incremental --config-file ../lint-configs/mypy.ini {env:LINT_FILES_TO_CHECK}'
 
 [testenv:unit-tests]
 deps =
