Add mypy target to radio_bridge, fix affected code.

--- a/lint-configs/mypy.ini
+++ b/lint-configs/mypy.ini
@@ -3,6 +3,7 @@ python_version = 3.6
 platform = linux
 show_error_context = True
 show_column_numbers = True
+mypy_path = ../:../wx_server/:.
 
 [mypy-structlog]
 ignore_missing_imports= True
@@ -10,5 +11,47 @@ ignore_missing_imports= True
 [mypy-gevent]
 ignore_missing_imports= True
 
-[mypy-generated.*]
+[mypy-pyaudio]
+ignore_missing_imports= True
+
+[mypy-expiringdict]
+ignore_missing_imports= True
+
+[mypy-numpy]
+ignore_missing_imports= True
+
+[mypy-scipy.*]
+ignore_missing_imports= True
+
+[mypy-configobj]
+ignore_missing_imports= True
+
+[mypy-pluginlib]
+ignore_missing_imports= True
+
+[mypy-espeakng]
+ignore_missing_imports= True
+
+[mypy-gtts]
+ignore_missing_imports= True
+
+[mypy-morse]
+ignore_missing_imports= True
+
+[mypy-apscheduler.*]
+ignore_missing_imports= True
+
+[mypy-mutagen.*]
+ignore_missing_imports= True
+
+[mypy-rpi.*]
+ignore_missing_imports= True
+
+[mypy-RPi.*]
+ignore_missing_imports= True
+
+[mypy-xmltodict]
+ignore_missing_imports= True
+
+[mypy-bs4]
 ignore_missing_imports= True
