--- a/radio_bridge/tox.ini
+++ b/radio_bridge/tox.ini
@@ -29,6 +29,7 @@ deps =
 commands =
     bash -c 'black --check --config ../pyproject.toml {env:LINT_FILES_TO_CHECK}'
     bash -c 'flake8 --config ../lint-configs/.flake8 {env:LINT_FILES_TO_CHECK}'
+    bash -c 'mypy --pretty --no-incremental --config-file ../lint-configs/mypy.ini {env:LINT_FILES_TO_CHECK}'
 
 [testenv:unit-tests]
 deps =
