Add coverage reporting to tox targets.

--- a/wx_server/tox.ini
+++ b/wx_server/tox.ini
@@ -37,4 +37,4 @@ deps =
     -r test-requirements.txt
     -r requirements.txt
 commands =
-    pytest -vv -s tests/unit/
+    pytest -vv -s --durations=5 --cov=wx_server/ --cov=tests/ tests/unit/
