--- a/radio_bridge/tox.ini
+++ b/radio_bridge/tox.ini
@@ -37,4 +37,4 @@ deps =
     -r test-requirements.txt
     -r requirements.txt
 commands =
-    pytest -vv -s tests/unit/
+    pytest -vv -s --durations=5 --cov=radio_bridge/ --cov=tests/ tests/unit/
