--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: pre_job
     strategy:
-      max-parallel: 2
+      max-parallel: 4
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
 
@@ -44,7 +44,7 @@ jobs:
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox tox-gh-actions
+        pip install -r ci-requirements.txt
     - name: Run Lint
       working-directory: wx_server/
       run: |
@@ -53,11 +53,12 @@ jobs:
       working-directory: wx_server/
       run: |
         tox -eunit-tests
+        codecov
   radio-bridge-build:
     runs-on: ubuntu-latest
     needs: pre_job
     strategy:
-      max-parallel: 2
+      max-parallel: 4
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
 
@@ -82,7 +83,7 @@ jobs:
     - name: Install Python Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install tox tox-gh-actions
+        pip install -r ci-requirements.txt
     - name: Run Lint
       working-directory: radio_bridge/
       run: |
@@ -91,3 +92,4 @@ jobs:
       working-directory: radio_bridge/
       run: |
         tox -eunit-tests
+        codecov
