--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       working-directory: wx_server/
       run: |
         tox -eunit-tests
-        codecov
+        codecov --required
   radio-bridge-build:
     runs-on: ubuntu-latest
     needs: pre_job
@@ -92,4 +92,4 @@ jobs:
       working-directory: radio_bridge/
       run: |
         tox -eunit-tests
-        codecov
+        codecov --required
