--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,8 @@ jobs:
       working-directory: wx_server/
       run: |
         tox -eunit-tests
-        codecov --required
+        coverage xml
+        codecov --required -F wx_server -f coverage.xml
   radio-bridge-build:
     runs-on: ubuntu-latest
     needs: pre_job
@@ -92,4 +93,5 @@ jobs:
       working-directory: radio_bridge/
       run: |
         tox -eunit-tests
-        codecov --required
+        coverage xml
+        codecov --required -F radio_bridge -f coverage.xml
