Test codecov path issue workaround.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,7 +57,7 @@ jobs:
         coverage xml
         sed -i 's#ham-radio/wx_server#ham_radio#g' coverage.xml
         sed -i 's#filename="#filename="wx_server/#g' coverage.xml
-        codecov --required -F wx_server -f coverage.xml
+        codecov --root ../ --required -F wx_server -f coverage.xml
   radio-bridge-build:
     runs-on: ubuntu-latest
     needs: pre_job
@@ -101,4 +101,4 @@ jobs:
         # Fix up path in the coverage.xml file
         sed -i 's#ham-radio/radio_bridge#ham_radio#g' coverage.xml
         sed -i 's#filename="#filename="radio_bridge/#g' coverage.xml
-        codecov --required -F radio_bridge -f coverage.xml
+        codecov --root ../ --required -F radio_bridge -f coverage.xml
