Make radio bridge installable as Python package.

--- a/radio_bridge/conf/radio_bridge.defaults.conf
+++ b/radio_bridge/conf/radio_bridge.defaults.conf
@@ -1,5 +1,5 @@
 [main]
-logging_config = {rootdir}/conf/logging.conf
+logging_config = {rootdir}/radio_bridge/conf/logging.conf
 dev_mode = False
 emulator_mode = False
 
