--- a/radio_bridge/tox.ini
+++ b/radio_bridge/tox.ini
@@ -38,3 +38,15 @@ deps =
     -r requirements.txt
 commands =
     pytest -vv -s --durations=5 --cov=radio_bridge/ --cov=tests/ tests/unit/
+
+[testenv:dist]
+# Verify library installs without any dependencies when using python setup.py
+# install
+skipdist = True
+recreate = True
+# NOTE: We intentionally set empty deps to ensure it works on a clean
+# environment without any dependencies
+deps =
+commands =
+    pip install .
+    pip show radio-bridge
