--- a/wx_server/tox.ini
+++ b/wx_server/tox.ini
@@ -38,3 +38,15 @@ deps =
     -r requirements.txt
 commands =
     pytest -vv -s --durations=5 --cov=wx_server/ --cov=tests/ tests/unit/
+
+[testenv:dist]
+# Verify library installs without any dependencies when using python setup.py
+# install
+skipdist = True
+recreate = True
+# NOTE: We intentionally set empty deps to ensure it works on a clean
+# environment without any dependencies
+deps =
+commands =
+    python setup.py install
+    pip show wx-server
