Add missing passenv which is not inherited.

--- a/radio_bridge/tox.ini
+++ b/radio_bridge/tox.ini
@@ -36,6 +36,7 @@ deps =
     -r ../dev-requirements.txt
     -r test-requirements.txt
     -r requirements.txt
+passenv = TERM CI
 commands =
     pytest -vv -s --durations=5 --cov=radio_bridge/ --cov=tests/ tests/unit/
 
