--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,8 @@ jobs:
         sudo apt-get update
         # Needed by pyaudio Python package
         sudo apt-get install -y libportaudio2 portaudio19-dev
+        # Needed for tts
+        sudo apt-get install -y espeak-ng
     - name: Cache Python Dependencies
       uses: actions/cache@v2
       with:
