Update cron plugin to utilize some of the new functions, etc. Fix invalid config.

--- a/radio_bridge/conf/radio_bridge.example.conf
+++ b/radio_bridge/conf/radio_bridge.example.conf
@@ -102,7 +102,7 @@ input_device_index = 11
 channels = 1
 sample_rate = 48000
 
-[plugin:cron]
+[plugin:cron_say]
 #say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
 #say_text_as_morse_every_30_seconds = interval;seconds=30;text_to_morse;sos
 #say_morse_code_every_40_seconds = interval;seconds=40;morse;... --- ...
