--- a/radio_bridge/conf/logging.conf
+++ b/radio_bridge/conf/logging.conf
@@ -8,12 +8,12 @@ keys = consoleHandler
 keys = textFormatter
 
 [logger_root]
-level = DEBUG
+level = INFO
 handlers = consoleHandler
 
 [handler_consoleHandler]
 class = StreamHandler
-level = DEBUG
+level = INFO
 formatter = textFormatter
 args = (sys.stdout,)
 
