--- a/radio_bridge/tox.ini
+++ b/radio_bridge/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = lint,unit-tests
+envlist = lint,unit-tests,micro-benchmarks
 skipsdist = true
 passenv = TERM CI
 setenv =
@@ -7,7 +7,7 @@ setenv =
 
 [testenv]
 setenv =
-  LINT_FILES_TO_CHECK={env:LINT_FILES_TO_CHECK:radio_bridge/ tests/}
+  LINT_FILES_TO_CHECK={env:LINT_FILES_TO_CHECK:radio_bridge/ tests/ benchmarks/}
   PYTHONPATH={toxinidir}/..:{toxinidir}/../wx_server:{toxinidir}
   PY_COLORS=1
 install_command = pip install -U --force-reinstall {opts} {packages}
@@ -39,6 +39,17 @@ deps =
 passenv = TERM CI
 commands =
     pytest -vv -s --durations=5 --cov=radio_bridge/ --cov=tests/ tests/unit/
+
+[testenv:micro-benchmarks]
+deps =
+    -r ../dev-requirements.txt
+    -r test-requirements.txt
+    -r requirements.txt
+    pytest-benchmark[histogram]
+passenv = TERM CI
+commands =
+    pytest --benchmark-only --benchmark-name=short --benchmark-columns=min,max,mean,stddev,median,ops,rounds --benchmark-histogram=benchmark_histograms/benchmark -vv -s --durations=5 benchmarks/micro/
+
 
 [testenv:dist]
 # Verify library installs without any dependencies when using python setup.py
