Add support for offline mode where only plugins which don't require internet connection are active.

--- a/radio_bridge/conf/radio_bridge.defaults.conf
+++ b/radio_bridge/conf/radio_bridge.defaults.conf
@@ -2,6 +2,7 @@
 logging_config = {rootdir}/radio_bridge/conf/logging.conf
 dev_mode = False
 emulator_mode = False
+offline_mode = False
 
 [tx]
 mode = vox
