--- a/radio_bridge/conf/radio_bridge.example.conf
+++ b/radio_bridge/conf/radio_bridge.example.conf
@@ -102,6 +102,12 @@ input_device_index = 11
 channels = 1
 sample_rate = 48000
 
+[plugin:traffic_events]
+# valid options: all, incidents, roadworks
+event_types = all
+# valid options: all, highway, nonhighway
+road_types = all
+
 [plugin:cron_say]
 #say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
 #say_text_as_morse_every_30_seconds = interval;seconds=30;text_to_morse;sos
