Rename traffic events plugin to traffic info plugin and add support for displaying border crossings delays data.

--- a/radio_bridge/conf/radio_bridge.example.conf
+++ b/radio_bridge/conf/radio_bridge.example.conf
@@ -102,7 +102,12 @@ input_device_index = 11
 channels = 1
 sample_rate = 48000
 
-[plugin:traffic_events]
+[plugin:traffic_info]
+[traffic_info]
+# Needed to be set for all the promet.si JSON API calls
+username = foo
+password = bar
+# Options for traffic events below
 # valid options: all, incidents, roadworks
 event_types = all
 # valid options: all, highway, nonhighway
