Allow operator to define how many items / events to retrieve and display.

--- a/radio_bridge/conf/radio_bridge.example.conf
+++ b/radio_bridge/conf/radio_bridge.example.conf
@@ -107,6 +107,8 @@ sample_rate = 48000
 # Needed to be set for all the promet.si JSON API calls
 username = foo
 password = bar
+# Number of most recent events to retrieve and display
+items_count = 5
 # Options for traffic events below
 # valid options: all, incidents, roadworks
 event_types = all
