--- a/radio_bridge/conf/radio_bridge.example.conf
+++ b/radio_bridge/conf/radio_bridge.example.conf
@@ -115,6 +115,11 @@ event_types = all
 # valid options: all, highway, nonhighway
 road_types = all
 
+[plugin_spin_evens]
+# RSS URL to use to retrieve events. Defaults to URL which includes all
+# confirmed events for all the cities
+url = https://spin3.sos112.si/api/javno/ODRSS/false
+
 [plugin:cron_say]
 #say_hello_world_every_120_seconds = interval;seconds=30;text;Current time is {time_utc} UTC.
 #say_text_as_morse_every_30_seconds = interval;seconds=30;text_to_morse;sos
