Add WIP support for govornik tts engine and multi language API.
Also update plugins to declare which languages they support and allow
language to be configured inside the config on plugin level for plugins
which support multiple languages.

Also support some plugins to support slovene language (current time,
traffic info).

--- a/radio_bridge/conf/radio_bridge.example.conf
+++ b/radio_bridge/conf/radio_bridge.example.conf
@@ -31,7 +31,10 @@ input_device_index = 11
 sample_rate = 48000
 
 [tts]
-# Which TTS implementation to use. Valid values: gtts,espeak
+# Which TTS implementation to use. Valid values: gtts, espeak, govornik
+# Keep in mind that right now only "govornik" supports Slovene language (sl_SI)
+# which means that plugins which use Slovene language will automatically use
+# that implementation
 implementation = espeak
 # True to cache synthesized files to allow faster playbacks of the text which was already
 # synthesized in the past.
